# Solar_Lords

./: LICENSE  README.md
art/: Astroid.aseprite  Background.aseprite  Enem_Corvette.aseprite  Mining_Ship.aseprite  solar_lords_spritesheet.aseprite
solar_lords/: Cargo.toml
solar_lords/assets/prefabs/: weapons.ron
solar_lords/assets/textures/: background_spritesheet.ron  solar_lords_spritesheet.ron
solar_lords/config/: display.ron  input.ron
solar_lords/src/: main.rs  solar_lords.rs
solar_lords/src/systems/: background_movement.rs  camera_zoom_system.rs  mining.rs  mod.rs  mouse_raycast.rs  player_control.rs
