[package]
name = "solar_lords"
version = "0.1.0"
authors = ["Abraham Huerta <hueabrw@dunwoody.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
